bk_ida/gccida/g3/unsigned_type
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1915:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 5) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1915:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 5) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1917:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 4) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1917:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 4) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1919:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 3) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1919:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 3) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1921:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 2) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1921:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 2) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1923:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 1) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/c-common.c:1923:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 1) == section_name ) 
       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unsigned_type/src/obj/c-common.o] Error 1
